# subt-ai-tles

./: README.md  justfile  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
src/subtaitles/: __init__.py  app.py  cache.py  cli.py  core.py  environment.py  exceptions.py  filesystem.py  imports.py  language.py  locale.py  srt.py  task.py  translate.py
src/subtaitles/providers/: __init__.py  gpt.py  libretranslate.py  openai.py  protocol.py  pyd_ai.py
src/subtaitles/templates/: base.html  error.html  home.html  login.html  processing.html
src/subtaitles/templates/components/: footer.html  navbar.html
src/subtaitles/translate/: __init__.py  deepl.py  gpt.py  lang.py  libretranslate.py
tests/: conftest.py  test_filesystem.py  test_gpt.py  test_srt.py  test_translate.py  utils.py
tests/data/: Middlemarch S01E01.srt  sub-short.srt  sub.srt
tests/data/nested_dir/: already_translated.cze.srt  not_a_sub.txt
tests/python/: conftest.py  test_gpt.py  test_srt.py
